// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Text /> Snapshots should match snapshot with Text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 32,
          "fontWeight": "700",
          "lineHeight": 40,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 24,
          "fontWeight": "700",
          "lineHeight": 32,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 16,
          "fontWeight": "700",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    inverted={false}
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 14,
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#41414A",
          "fontFamily": "Open Sans",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
</View>
`;

exports[`<Text /> Snapshots should match snapshot with Text variant 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#F46152",
          "fontFamily": "Open Sans",
          "fontSize": 32,
          "fontWeight": "700",
          "lineHeight": 40,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="primary"
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#652CDB",
          "fontFamily": "Open Sans",
          "fontSize": 24,
          "fontWeight": "700",
          "lineHeight": 32,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="secondary"
  >
    Live the mission
  </Text>
  <Text
    style={
      Array [
        Object {
          "color": "#22766B",
          "fontFamily": "Open Sans",
          "fontSize": 20,
          "fontWeight": "700",
          "lineHeight": 24,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
    variant="tertiary"
  >
    Live the mission
  </Text>
</View>
`;

exports[`<Text /> Snapshots should match snapshot with inverted Text 1`] = `
<View
  collapsable={true}
  pointerEvents="box-none"
  style={
    Object {
      "flex": 1,
    }
  }
>
  <Text
    inverted={true}
    style={
      Array [
        Object {
          "color": "#FFFFFF",
          "fontFamily": "Open Sans",
          "fontSize": 16,
          "fontWeight": "400",
          "lineHeight": 20,
          "marginBottom": 0,
          "marginLeft": 0,
          "marginRight": 0,
          "marginTop": 0,
          "paddingBottom": 0,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 0,
        },
      ]
    }
  >
    Live the mission
  </Text>
</View>
`;
